Term Project/CloudHarbour-Deployer/ec2.yml
AWSTemplateFormatVersion: 2010-09-09
Resources:
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable public access to ssh
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: "-1"
          CidrIp: 0.0.0.0/0
      VpcId: vpc-0cf0843aaf855cb84
  MyEC2Instanceproducer:
    Type: "AWS::EC2::Instance"
    DependsOn: EC2SecurityGroup
    Properties:
      ImageId: ami-09538990a0c4fe9be
      InstanceType: t2.micro
      KeyName: manan-mistry-serverless
      NetworkInterfaces:
        - AssociatePublicIpAddress: True
          DeviceIndex: "0"
          SubnetId: subnet-061b40efc6951a9d9
          GroupSet:
            - !Ref EC2SecurityGroup
      Tags:
        - Key: 'Name'
          Value: 'CloudHarbourProducer'
      IamInstanceProfile: 'LabRole'
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          echo "Hello from UserData!" > /home/ec2-user/userdata_output.txt
          sudo yum update -y
          sudo yum install git -y
          sudo yum install java-17-amazon-corretto -y
          echo "Hello from UserData!" > /home/ec2-user/userdata_output.txt
          curl -LO "https://dl.k8s.io/release/v1.23.6/bin/linux/amd64/kubectl"
          sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
          sudo su ec2-user -c 'aws eks update-kubeconfig --region us-east-1 --name CloudHarbour'
          git clone https://github.com/mistrymanan/CloudHarbour.git
          cd CloudHarbour/CloudHarbour-Deployer/target
          chmod 665 ./CloudHarbour-Deployer-0.0.1-SNAPSHOT.jar
          nohup java -jar ./CloudHarbour-Deployer-0.0.1-SNAPSHOT.jar &
  MyEC2Instance123:
    Type: "AWS::EC2::Instance"
    DependsOn: EC2SecurityGroup
    Properties:
      ImageId: ami-09538990a0c4fe9be
      InstanceType: t2.micro
      KeyName: manan-mistry-serverless
      NetworkInterfaces:
        - AssociatePublicIpAddress: True
          DeviceIndex: "0"
          SubnetId: subnet-061b40efc6951a9d9
          GroupSet:
            - !Ref EC2SecurityGroup
      Tags:
        - Key: 'Name'
          Value: 'CloudHarbourDeployer'
      IamInstanceProfile: 'LabRole'
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          echo "Hello from UserData!" > /home/ec2-user/userdata_output.txt
          sudo yum update -y
          sudo yum install git -y
          sudo yum install java-17-amazon-corretto -y
          echo "Hello from UserData!" > /home/ec2-user/userdata_output.txt
          curl -LO "https://dl.k8s.io/release/v1.23.6/bin/linux/amd64/kubectl"
          git clone https://github.com/mistrymanan/CloudHarbour.git
          chmod 665 ./CloudHarbour/CloudHarbour-Deployment-Producer/target/CloudHarbour-Deployment-Producer-0.0.1-SNAPSHOT.jar
          sudo amazon-linux-extras install nginx1 -y
          sudo systemctl enable nginx.service
          sudo systemctl start nginx.service
          sudo cp -rf ./CloudHarbour/frontend/cloud_harbour_frontend/build/* /usr/share/nginx/html/
          nohup java -jar ./CloudHarbour/CloudHarbour-Deployment-Producer/target/CloudHarbour-Deployment-Producer-0.0.1-SNAPSHOT.jar &
#          #!/bin/bash
#          echo "Hello from UserData!" > /home/ec2-user/userdata_output.txt
#          sudo yum update -y
#          sudo yum install git -y
#          sudo yum install java-17-amazon-corretto -y
#          echo "Hello from UserData!" > /home/ec2-user/userdata_output.txt
#          curl -LO "https://dl.k8s.io/release/v1.23.6/bin/linux/amd64/kubectl"
#          sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
#          sudo su ec2-user -c 'aws eks update-kubeconfig --region us-east-1 --name CloudHarbour'
#          sudo su ec2-user -c 'git clone https://github.com/mistrymanan/CloudHarbour.git'
#          sudo su ec2-user -c 'cd CloudHarbour/target'
#          nohup java -jar ./CloudHarbour-Deployer-0.0.1-SNAPSHOT.jar &
#          cp -rf /root/.kube/ /home/ec2-user/
#          chmod
